--- a/README
+++ b/README
@@ -12,7 +12,8 @@ Building the FAQ:
 
 Installing at Erlang.org:
 
-        Done manually by Bjorn G. See the makefile.
+	This now happens automatically every time the matthiasl
+	github repository changes. Bjorn G set that up.
 
 Doing a git pull from Bjorn's fork
 
